etc/docker/kubernetes/dockercoins.yaml
################################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza             #
#      SPDX-License-Identifier:  GPL-2.0-only                                  #
################################################################################
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rng
  namespace: demo
spec:
  selector:
    matchLabels:
      service: rng
  template:
    metadata:
      labels:
        service: rng
    spec:
      containers:
      -
        image: secobau/dockercoins:rng-1.1
        name: rng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hasher
  template:
    metadata:
      labels:
        service: hasher
    spec:
      containers:
      -
        image: secobau/dockercoins:hasher-1.3
        name: hasher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
      -
        image: redis
        name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webui
  template:
    metadata:
      labels:
        service: webui
    spec:
      containers:
      -
        image: secobau/dockercoins:webui-1.3
        name: webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: worker
  template:
    metadata:
      labels:
        service: worker
    spec:
      containers:
      -
        image: secobau/dockercoins:worker-1.0
        name: worker
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher
  namespace: demo
spec:
  podSelector:
    matchLabels:
      service: hasher
  ingress:
    -
      from:
        -
          namespaceSelector:
            matchLabels:
              namespace: demo
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: demo
spec:
  podSelector:
    matchLabels:
      service: redis
  ingress:
    -
      from:
        -
          namespaceSelector:
            matchLabels:
              namespace: demo
        -
          podSelector:
            matchLabels:
              service: webui
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng
  namespace: demo
spec:
  podSelector:
    matchLabels:
      service: rng
  ingress:
    -
      from:
        -
          namespaceSelector:
            matchLabels:
              namespace: demo
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker
  namespace: demo
spec:
  podSelector:
    matchLabels:
      service: worker
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
  namespace: demo
spec:
  ports:
  -
    port: 80
  selector:
    service: hasher
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo
spec:
  ports:
  -
    port: 6379
  selector:
    service: redis
---
apiVersion: v1
kind: Service
metadata:
  name: rng
  namespace: demo
spec:
  ports:
  -
    port: 80
  selector:
    service: rng
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: demo
spec:
  ports:
  -
    port: 80
  selector:
    service: webui
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dockercoins
  namespace: demo
spec:
  host: dockercoins.apps.openshift.sebastian-colomar.com
  to:
    kind: Service
    name: webui
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
################################################################################
